# Pacman-Reloaded

./: .gitignore  CMakeLists.txt  GENERAL_CONCEPT.md  LICENSE  Makefile  README.md  RULES OF WELL-ARRANGED CODE WRITING.md  Rules of well-arranged code writing.md
cmake/: ExternalAllegro.cmake
data/img/: Thumbs.db
src/: CMakeLists.txt  NPC.cpp  NPC.h  coin.cpp  coin.h  enemy.cpp  enemy.h  game_object.cpp  game_object.h  globals.h  main.cpp  menu.cpp  menu.h  mobile_object.cpp  mobile_object.h  objects.cpp  objects.h  player.cpp  player.h  power_up.cpp  power_up.h  scatter_point.cpp  scatter_point.h  static_object.cpp  static_object.h
