list(APPEND PACMAN_SOURCES coin.cpp)
list(APPEND PACMAN_SOURCES coin.h)
list(APPEND PACMAN_SOURCES enemy.cpp)
list(APPEND PACMAN_SOURCES enemy.h)
list(APPEND PACMAN_SOURCES game_object.cpp)
list(APPEND PACMAN_SOURCES game_object.h)
list(APPEND PACMAN_SOURCES globals.h)
list(APPEND PACMAN_SOURCES main.cpp)
list(APPEND PACMAN_SOURCES mobile_object.cpp)
list(APPEND PACMAN_SOURCES mobile_object.h)
list(APPEND PACMAN_SOURCES player.cpp)
list(APPEND PACMAN_SOURCES player.h)
list(APPEND PACMAN_SOURCES power_up.cpp)
list(APPEND PACMAN_SOURCES power_up.h)
list(APPEND PACMAN_SOURCES scatter_point.cpp)
list(APPEND PACMAN_SOURCES scatter_point.h)
list(APPEND PACMAN_SOURCES static_object.cpp)
list(APPEND PACMAN_SOURCES static_object.h)

set(PACMAN_TARGET Pacman)
add_executable(${PACMAN_TARGET} ${PACMAN_SOURCES})
target_link_libraries(${PACMAN_TARGET} PRIVATE ${ALLEGRO_LIBS})
target_link_directories(${PACMAN_TARGET} PRIVATE ${ALLEGRO_LIB_DIR})
target_include_directories(${PACMAN_TARGET} PRIVATE ${ALLEGRO_INCLUDES})
